test/classes/deitz/inherit/test_value2.good
test_value2.chpl:6: error: inheritance is not currently supported for records
